--- a/markitup/skins/simple/style.css
+++ b/markitup/skins/simple/style.css
@@ -12,7 +12,7 @@
 	text-decoration:none;
 }
 .markItUp  {
-	width:700px;
+	width:auto;
 	margin:5px 0 5px 0;
 }
 .markItUpContainer  {
@@ -21,17 +21,17 @@
 .markItUpEditor {
 	font:12px 'Courier New', Courier, monospace;
 	padding:5px;
-	width:690px;
+	width:99.9%;
 	height:320px;
-	clear:both;
+	clear:both; display:block;
 	line-height:18px;
 	overflow:auto;
 }
 .markItUpPreviewFrame	{
 	overflow:auto;
-	background-color:#FFF;
+	background-color:#FFFFFF;
 	width:99.9%;
-	height:300px;
+	height:350px;
 	margin:5px 0;
 }
 .markItUpFooter {
@@ -101,7 +101,7 @@
 	width:16px; height:16px;
 	text-indent:-10000px;
 	background-repeat:no-repeat;
-	padding:3px;
+	padding:10px;
 	margin:0px;
 }
 .markItUpHeader ul ul a {
